--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@ body, html {
     line-height: 1.6;
     color: #ddd;
     background: #121212;
+    height: 100%;
 }
 
 header {
@@ -17,6 +18,7 @@ header {
 header .navbar ul {
     list-style-type: none;
     padding: 0;
+    margin: 0;
 }
 
 header .navbar ul li {
@@ -38,7 +40,7 @@ header .navbar ul li a:hover {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 80vh;
+    min-height: calc(100vh - 132px); /* Adjust according to header and footer height */
     text-align: center;
     background-color: #121212;
 }
@@ -58,4 +60,15 @@ footer {
 
 footer p {
     margin: 0;
+}
+
+@media (max-width: 768px) {
+    .coming-soon h1 {
+        font-size: 2.5rem;
+    }
+
+    header .navbar ul li {
+        display: block;
+        margin: 10px 0;
+    }
 }
